@@ -43,5 +43,11 @@ Esse foi o último trabalho a ser desenvolvido, se trata de uma simulação de u
 
 ## Para testar os projetos
 <div align="justify">
-Será necessária a instalação do Java e do Javafx. Além disso será necessário também o caminho absoluto para a pasta "lib" do Javafx com o intuito de importar as classes que serão utilizadas na interface gráfica. OS detalhes serão descritos no README de cada projeto.
+Será necessária a instalação do Java e do Javafx. Procure o caminho da pasta "lib" do javafx e o copie. 
+
+### Rode o programa
+```shell
+javac --module-path \"YourPath/lib\" --add-modules javafx.controls,javafx.fxml Principal.java
+java --module-path \"YourPath/lib\" --add-modules javafx.controls,javafx.fxml Principal
+```
 </div>
